<resources>
    <string name="app_name">Health Diary</string>

    <string name="select_what_hurts">Select what hurts</string>

    <string name="head">Head</string>
    <string name="body">Body</string>
    <string name="legs">Legs</string>
    <string name="hands">Hands</string>

    <string name="hurts">Біль</string>
    <string name="weight">Вага</string>
    <string name="pulse">Пульс</string>
    <string name="pressure">Тиск</string>
    <string name="temperature">Температура</string>
    <string name="sleep">Сон</string>
    <string name="oxygen">Кисень</string>
    <string name="glucose">Глюкоза</string>
    <string name="pedometer">Крокомір</string>

    <string name="body_parts">Selected body parts:</string>
    <string-array name="parts">
        <item>Head</item>
        <item>Body</item>
        <item>Hands</item>
        <item>Legs</item>
    </string-array>

</resources>