<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

        <Button
            android:id="@+id/btn_hurts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hurts" />

        <Button
            android:id="@+id/btn_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight" />

        <Button
            android:id="@+id/btn_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature" />

        <Button
            android:id="@+id/btn_pulse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pulse" />

        <Button
            android:id="@+id/btn_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressure" />

        <Button
            android:id="@+id/btn_sleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>